--- a/index.html
+++ b/index.html
@@ -11,24 +11,27 @@
         media="screen" 
         charset="utf-8">
 </head>
-<body>
-  <header class="aaa">
-    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-    <a class="more_inf" 
+
+<body class="wrapper">
+  <header class="header">
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix" class="header__logo">
+    <a class="header__link" 
        href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main class="centered-main-page-element">
-    <section class="add">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
-        </div>
-      </p>
+
+  <main class="main">
+    <section class="add main__add">
+      <label for="new-task" class="add__label">
+        <h3 class="title add__title">Add Item</h3>
+      </label>
+      <div class="task-form add__task-form">
+        <input  class="task-form__new-task" type="text" id="new-task">
+        <button class="task-form__button">Add</button>
+      </div>
     </section>
-    <section class="todo">
-      <h3>Todo</h3>
+
+    <section class="todo main__todo">
+      <h3 class="title">Todo</h3>
       <ul id="incompleteTasks">
         <li>
           <input type="checkbox">
@@ -50,8 +53,9 @@
         </li>
       </ul>
     </section>
-    <section class="completed">
-      <h3>Completed</h3>
+    
+    <section class="completed main_complited">
+      <h3 class="title">Completed</h3>
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
