--- a/index.html
+++ b/index.html
@@ -11,59 +11,55 @@
         media="screen" 
         charset="utf-8">
 </head>
-
 <body class="wrapper">
   <header class="header">
     <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix" class="header__logo">
     <a class="header__link" 
        href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-
   <main class="main">
     <section class="add main__add">
       <label for="new-task" class="add__label">
         <h3 class="title add__title">Add Item</h3>
       </label>
       <div class="task-form add__task-form">
-        <input  class="task-form__new-task" type="text" id="new-task">
-        <button class="task-form__button">Add</button>
+        <input  class="button task-form__new-task" type="text" id="new-task">
+        <button class="button task-form__button">Add</button>
       </div>
     </section>
-
     <section class="todo main__todo">
       <h3 class="title">Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove">
+      <ul class="list todo__list">
+        <li class="list__item">
+          <input type="checkbox" class="list__checkbox">
+          <label class="list__label">Pay Bills</label>
+          <input type="text" class="list__input">
+          <button class="button list__button_edit">Edit</button>
+          <button class="button list__button_delete">
+            <img src="./remove.svg" alt="Remove" class="button__img">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove">
+        <li class="list__item list__item_edit">
+          <input type="checkbox" class="list__checkbox">
+          <label class="list__label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="list__input">
+          <button class="button list__button_edit">Save</button>
+          <button class="button list__button_delete">
+            <img src="./remove.svg" alt="Remove" class="button__img">
           </button>
         </li>
       </ul>
     </section>
-    
     <section class="completed main_complited">
       <h3 class="title">Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="Remove">
+      <ul id="completed-tasks" class="list completed__list">
+        <li class="list__item">
+          <input type="checkbox" checked class="list__checkbox">
+          <label class="list__label">See the Doctor</label>
+          <input type="text" class="list__input">
+          <button class="button list__button_edit">Edit</button>
+          <button class="button list__button_delete">
+            <img src="./remove.svg" alt="Remove" class="button__img">
           </button>
         </li>
       </ul>
